black button not showing text fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,9 @@ body {
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+}
+
+a:not([class]) {
+  color: inherit;
 }
